Scrollbar test fix

--- a/CSS/themes/lidarr/lidarr-base.css
+++ b/CSS/themes/lidarr/lidarr-base.css
@@ -982,3 +982,11 @@ a:hover {
     color: #FFF;
     background-color: #f05050;
 }
+
+/* Scrollbar test fix*/
+
+[class*="PageContentBody-contentBody-"],
+[class*="PageSidebar-sidebar-"] {
+    margin-right: -70px !important;
+    margin-bottom: -70px !important;   
+}
