--- a/CSS/themes/prowlarr/prowlarr-base.css
+++ b/CSS/themes/prowlarr/prowlarr-base.css
@@ -951,3 +951,11 @@ a:hover {
 canvas {
 filter: invert(1)
 }
+
+/* Scrollbar test fix*/
+
+[class*="PageContentBody-contentBody-"],
+[class*="PageSidebar-sidebar-"] {
+    margin-right: -70px !important;
+    margin-bottom: -70px !important;   
+}
