--- a/CSS/themes/readarr/readarr-base.css
+++ b/CSS/themes/readarr/readarr-base.css
@@ -1037,3 +1037,11 @@ a:hover {
 [class*="BookDetails-tab-"] {
     color: #FFF;
 }
+
+/* Scrollbar test fix*/
+
+[class*="PageContentBody-contentBody-"],
+[class*="PageSidebar-sidebar-"] {
+    margin-right: -70px !important;
+    margin-bottom: -70px !important;   
+}
