--- a/CSS/themes/sonarr/sonarr-base.css
+++ b/CSS/themes/sonarr/sonarr-base.css
@@ -912,6 +912,14 @@ a:hover {
     color: var(--text);
 }
 
+/* Scrollbar test fix*/
+
+[class*="PageContentBody\/contentBody\/"],
+[class*="PageSidebar\/sidebar\/"] {
+    margin-right: -70px !important;
+    margin-bottom: -70px !important;   
+}
+
 
 /* Nightly */
 /* Froms */
@@ -1802,4 +1810,12 @@ a:hover {
 [class*="ReleaseSceneIndicator-levelMapped-"] {
     border-color: var(--text);
     color: var(--text);
+}
+
+/* Scrollbar test fix*/
+
+[class*="PageContentBody-contentBody-"],
+[class*="PageSidebar-sidebar-"] {
+    margin-right: -70px !important;
+    margin-bottom: -70px !important;   
 }
